--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "author": "DevRappers <devrappers@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "@babel/core": "^7.7.2",
+        "@babel/node": "^7.7.0",
+        "@babel/preset-env": "^7.7.1",
+        "dotenv": "^8.2.0",
         "graphql-yoga": "^1.18.3"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
         "nodemon": "^1.19.4"
     },
     "scripts": {
